mises à jour complète - mises à jour logicielle (passage et OpenJDK 12, MAJ de Maven 3.6.2 et MongoDB Server 4.0.12) - mises à jour des dépendances côté serveur (BouncyCastle 1.63, FreeMarker 2.3.29, MongoDB Driver 3.11.0, slf4j 1.7.28) - mises à jour des dépendances côté client (CodeMirror 5.48.4)